[gd_scene load_steps=5 format=3 uid="uid://cwrhyunagdaa8"]

[ext_resource type="Script" path="res://scenes/objects/computer_1.gd" id="1_dn8mr"]
[ext_resource type="Texture2D" uid="uid://dkhnkd3vfif6m" path="res://assets/item/white.png" id="1_mqpx0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qc308"]
size = Vector2(5.10204, 4.59184)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gt00n"]
size = Vector2(24, 19)

[node name="Computer" type="StaticBody2D"]
collision_layer = 12
script = ExtResource("1_dn8mr")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.176471, 1, 1, 1)
scale = Vector2(0.08, 0.0722892)
texture = ExtResource("1_mqpx0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0, 0.552941, 0.552941, 1)
scale = Vector2(3.92, 3.92)
shape = SubResource("RectangleShape2D_qc308")

[node name="InteractionZone" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionZone"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_gt00n")

[node name="InteractIcon" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.223529, 1, 1)
position = Vector2(9, -11)
scale = Vector2(0.048, 0.0321285)
texture = ExtResource("1_mqpx0")

[connection signal="body_entered" from="InteractionZone" to="." method="_on_interaction_zone_body_entered"]
[connection signal="body_exited" from="InteractionZone" to="." method="_on_interaction_zone_body_exited"]
